# bmpp-agents-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  test.json
.github/: CONTRIBUTING.md  FUNDING.yaml
.github/workflows/: ci.yml
docs/: VALIDATION.md
examples/: STARTER-PROTOCOL.bmpp  STARTER-PROTOCOL_COMPOSED.bmpp  [llama3.2]from_proto_description.txt  [smollm2]from_proto_description.txt
src/: lib.rs  main.rs
src/cli/: args.rs  commands.rs
src/grammars/v1/: bmpp.bnf  bmpp.ebnf  bmpp.pest
src/protocol/: ast.rs
src/runnable/: mod.rs
src/runtime/: client.rs  llm_interface.rs
src/transpiler/: codegen.rs  composition.rs  mod.rs  parser.rs  parser_pest.rs  project_builder.rs
src/transpiler/parser/: mod.rs  tests.rs
src/transpiler/validation/: errors.rs  mod.rs  tests.rs
src/utils/: ast.rs
tests/: test_analyse_parsing_full_protocol.rs  test_bspl_pre_protocol.rs  test_integration_transpiler.rs  test_integration_transpiler_as_lib.rs  test_parser_debug.rs  test_protocol_composition.rs  test_unit_extra.rs
