[package]
name = "bmpp-agents"
version = "0.5.0"
edition = "2024"
repository = "https://github.com/Mec-iS/bmpp-agents-rs"
description = "Programmatically instantiate Web Agents from BMPP files"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0"
reqwest = { version = "^0.12", features = ["json", "blocking"] }
clap = { version = "*", features = ["derive"] }
anyhow = "1.0"
thiserror = "^2.0"
tera = "^1.19"
once_cell = "1.19"
regex = "1.11.2"
mockall = "^0.13.1"
peg = "0.8.5"

[dev-dependencies]
tempfile = "3.21.0"
clippy = "*"

[lib]
name = "bmpp_agents"
crate-type = ["rlib"]

[[bin]]
name = "bmpp"
path = "src/main.rs"

[profile.test]
debug = 1
opt-level = 3

[profile.release]
strip = true 
lto = true
codegen-units = 1
overflow-checks = true
